# QtVulkanSceneGraphUiRenderingConcepts

./: SUMMARY.md  untitled-1.md  untitled.md
UIRenderingConcepts/: .gitignore
UIRenderingConcepts/UIGraphicsDemo/: CMakeLists.txt  UIGraphicsRenderingConcepts.pro  resource.qrc
UIRenderingConcepts/UIGraphicsDemo/source/: UIDemo.cpp  UIDemo.h  UIDemoApp.h  UiDemoApp.cpp  UiMetalPaintEngine.cpp  UiMetalPaintEngine.h
UIRenderingConcepts/UIGraphicsDemo/source/Circle/: Circle.cpp  Circle.h  Circle.pri
UIRenderingConcepts/UIGraphicsDemo/source/Rectangle/: Rect.cpp  Rect.h  Rectangle.pri
UIRenderingConcepts/common/: MetalView.mm
UIRenderingConcepts/common/SceneGraph/: Common.h  EngineInstance.cpp  EngineInstance.h  Node.cpp  Node.h  PWidget.cpp  PWidget.h  RenderSchemeFactory.cpp  RenderSchemeFactory.h  Scene.cpp  Scene.h  SceneGraph.pri  Transformation.cpp  Transformation.h  Window.cpp  Window.h
UIRenderingConcepts/engine/vulkan/core/: VulkanApp.cpp  VulkanApp.h  VulkanCommandBuffer.cpp  VulkanCore.pri  VulkanHelper.cpp  VulkanHelper.h
UIRenderingConcepts/engine/vulkan/implementation/Circle/: CircleDescriptorSet.cpp  CircleDescriptorSet.h  CircleGeometry.h  CircleShaderTypes.h  VkCircleImp.pri  VulkanCircleMultiDrawScheme.cpp  VulkanCircleMultiDrawScheme.h
UIRenderingConcepts/engine/vulkan/implementation/Rectangle/: RectangleDescriptorSet.cpp  RectangleDescriptorSet.h  RectangleGeometry.h  RectangleShaderTypes.h  VkRectangleImp.pri  VulkanRectangleInstancingScheme.cpp  VulkanRectangleInstancingScheme.h  VulkanRectangleMultiDrawScheme.cpp  VulkanRectangleMultiDrawScheme.h
UIRenderingConcepts/engine/vulkan/implementation/Shaders/: CircleMultiDrawScheme.frag  CircleMultiDrawScheme.vert  CircleMultiDrawSchemeFrag.spv  CircleMultiDrawSchemeVert.spv  RectangleInstancingScheme.frag  RectangleInstancingScheme.vert  RectangleInstancingSchemeFrag.spv  RectangleInstancingSchemeOutline.frag  RectangleInstancingSchemeOutlineFrag.spv  RectangleInstancingSchemeVert.spv  RectangleMultiDrawScheme.frag  RectangleMultiDrawScheme.vert  RectangleMultiDrawSchemeFrag.spv  RectangleMultiDrawSchemeVert.spv  VulkanShaders.qrc
